Add favorite string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_popular">Popular</string>
     <string name="action_top_rated">Top Rated</string>
+    <string name="action_favorite">Favorite</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="poster_image_content">PosterImageContent</string>
     <string name="rating">Rating</string>
