--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="mark_as_favorite">Mark as favorite</string>
     <string name="favorite">Favorite</string>
     <string name="reviews">Reviews</string>
+    <string name="trailers">Trailers</string>
 </resources>
